--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,2 +1,31 @@
-<h1>Public::Users#show</h1>
-<p>Find me in app/views/public/users/show.html.erb</p>
+<div class="container">
+  <div class="row">
+    <h4>マイページ</h4>
+  </div>
+
+  <div class="row">
+    <div class="col-md-2 ml-auto">
+      <%= image_tag @user.get_image(200, 200), class: "rounded-circle" %>
+    </div>
+    <div class="col-md-7">
+      <div class="row">
+        ニックネーム<br>
+       <%= @user.name %>
+      </div>
+      <div class="row">
+        プロフィール<br>
+        <%= @user.introduction %>
+      </div>
+      <div class="row">
+        <%= link_to "編集する", edit_users_path, class: "btn btn-sm btn-secondary" %>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <h4>投稿一覧</h4>
+  </div>
+  <div class="row">
+
+  </div>
+</div>
