--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   <body>
 
       <%= render 'layouts/header' %>
+      <%= render 'layouts/search' %>
       <%= render 'layouts/notice' %>
 
       <%= yield %>
