--- a/app/views/public/searchs/search.html.erb
+++ b/app/views/public/searchs/search.html.erb
@@ -1,2 +1,16 @@
-<h1>Public::Searchs#search</h1>
-<p>Find me in app/views/public/searchs/search.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render "layouts/sidebar" %>
+    </div>
+    <div class="col-md-9">
+      <% if @category == "movie" %>
+        <%= render "movie_results", movies: @movies, content: @content %>
+      <% elsif @category == "tv" %>
+        <%= render "tv_results", tvs: @tvs, content: @content %>
+      <% else %>
+        <%= render "tag_results", posts: @posts, content: @content %>
+      <% end %>
+    </div>
+  </div>
+</div>
