--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,15 +1,15 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 
-body {
-  min-height: 100vh;
-  position: relative;
-}
+// body {
+//   min-height: 100vh;
+//   position: relative;
+// }
 
-footer {
-  width: 100%;
-  height: 100px;
-  line-height: 100px;
-  position: absolute;
-  bottom: 0;
-}
+// footer {
+//   width: 100%;
+//   height: 100px;
+//   line-height: 100px;
+//   position: absolute;
+//   bottom: 0;
+// }
