--- a/app/views/layouts/_notice.html.erb
+++ b/app/views/layouts/_notice.html.erb
@@ -1,3 +1,11 @@
 <% if flash[:notice] %>
-  <%= flash[:notice] %>
+  <div class="container">
+    <div class="row">
+      <div class="col-8 mx-auto mt-3">
+        <p class="text-center text-success font-weight-bold" id="notice">
+          <%= flash[:notice] %>
+        </p>
+      </div>
+    </div>
+  </div>
 <% end %>
