--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,5 +1,5 @@
 <% unless admin_signed_in? %>
-  <div class="container">
+  <div class="container pb-4 pt-2">
     <div class="row">
       <div class="col-md-9 mx-auto text-center">
         <%= form_tag(search_path, method: :get) do %>
