--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,1 +1,7 @@
-about page
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 mx-auto">
+      <p></p>
+    </div>
+  </div>
+</div>
