--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="bg-secondary">
+<footer class="bg-secondary mt-5">
   <div class="container">
     <div class="row">
       <div class='mx-auto'>
