--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,16 +1,19 @@
 <div class="container">
   <div class="row">
-    <h5>新規レビュー</h5>
+    <h4 class="col-8 py-4 mx-auto">新規レビュー</h4>
   </div>
+
   <div class="row">
     <div class="col-md-8 mx-auto">
       <%= render "layouts/errors", obj: @post %>
       <%= form_with model: @post, url: posts_path, local: true, method: :post do |f| %>
         <%= f.hidden_field :category, :value => @category %>
         <%= f.hidden_field :tmdb_no, :value => @tmdb_no %>
+
         <div class="row">
           <p>レート</p>
         </div>
+
         <div class="row">
           <div id="total-form" class="col-6">
             <label>total　</label>
@@ -29,17 +32,27 @@
             <%= f.hidden_field :splatter_rate, :value => 'score' %>
           </div>
         </div>
+
         <div class="row mt-3">
           <p>レビュー</p>
           <%= f.text_area :review, rows:'5', class: "form-control form-control-sm" %>
         </div>
+
         <div class="row p-3">
           <div class="pr-2"><%= f.check_box :is_spoiler %></div>
-          <i class="fas fa-exclamation-triangle text-warning"></i>
-          <p>レビューにネタバレが含まれる場合はチェックを入れてください。</p>
+          <p><i class="fas fa-exclamation-triangle text-warning"></i> レビューにネタバレが含まれる場合はチェックを入れてください。</p>
         </div>
+
+        <div class="row">
+          <p>タグ　（複数登録の場合は、「,」で区切ってください。）</p>
+        </div>
+
+        <div class="row pb-4">
+          <%= text_field_tag :name, "", {class: "form-control form-control-sm"} %>
+        </div>
+
         <p class="text-center">
-          <%= f.submit "投稿する", class: "btn btn-sm btn-outline-secondary" %>
+          <%= f.submit "投稿する", class: "btn btn-sm btn-outline-secondary w-25" %>
         </p>
       <% end %>
     </div>
