--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="row">
-    <h4 class="col-8 mx-auto">マイページ</h4>
+    <h4 class="col-8 py-4 mx-auto">マイページ</h4>
   </div>
 
   <div class="row">
-    <div class="col-md-5 text-right">
+    <div class="col-5 text-right">
       <%= image_tag @user.get_image(200, 200), class: "rounded-circle" %>
     </div>
 
-    <div class="col-md-1"></div>
+    <div class="col-1"></div>
 
-    <div class="col-md-5">
+    <div class="col-5">
       <div class="row">
         ニックネーム<br>
        <%= @user.name %>
@@ -29,6 +29,15 @@
     <h5 class="col-8 mx-auto">投稿一覧</h5>
   </div>
 
-  <%= render "public/posts/posts_index", posts: @posts %>
+  <div class="row">
+    <div class="col-10 mx-auto">
+      <%= render "public/posts/posts_index", posts: @posts %>
+    </div>
+  </div>
+
+
+  <div class="row">
+    <p><%= paginate @posts %></p>
+  </div>
 
 </div>
