--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -6,13 +6,22 @@
       </div>
 
       <% @posts.each do |post| %>
-        <div class="row">
+        <div class="row border rounded p-3 mb-3">
           <div class="col-3">
             <%= image_tag post.user.get_image(100, 100) %>
           </div>
 
-          <div class="col-7">
+          <div class="col-9">
+            <p>
+              <%= post.user.name %><br>
+              <%= post.created_at.strftime('%Y/%m/%d') %>
+            </p>
 
+            <p><%= post.review %></p>
+
+            <div class="text-center">
+              <%= link_to "詳細", admin_post_path(post.id), class: "btn btn-sm btn-outline-secondary w-50" %>
+            </div>
           </div>
         </div>
       <% end %>
