--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -18,11 +18,15 @@
       </div>
 
       <div class="row border-bottom pt-2">
-        <%= image_tag @post.user.get_image(100, 100), class: "rounded-circle" %>
-        <P>
-          <%= @post.user.name %><br>
-          <%= "投稿日　" + @post.created_at.strftime('%Y/%m/%d') %>
-        </P>
+        <div class="col-2">
+          <%= link_to user_post_list_path(@post.user.id) do %>
+            <%= image_tag @post.user.get_image(100, 100), class: "rounded-circle" %>
+          <% end %>
+        </div>
+        <div class="col">
+          <P><%= @post.user.name %></P>
+          <P><%= "投稿日　" + @post.created_at.strftime('%Y/%m/%d') %></P>
+        </div>
       </div>
 
       <div class="row pt-1">
@@ -30,10 +34,25 @@
       </div>
 
       <div class="row border-bottom pb-1">
-        <div class="total-rate col-6" data-score="<%= @post.total_rate %>">total　</div>
-        <div class="story-rate col-6" data-score="<%= @post.story_rate %>">story　</div>
-        <div class="fear-rate col-6" data-score="<%= @post.fear_rate %>">fear　</div>
-        <div class="splatter-rate col-6" data-score="<%= @post.splatter_rate %>">splatter　</div>
+        <div class="col-2">total</div>
+        <div class="col-4">
+          <div class="total-rate" data-score="<%= @post.total_rate %>"></div>
+        </div>
+
+        <div class="col-2">story</div>
+        <div class="col-4">
+          <div class="story-rate" data-score="<%= @post.story_rate %>"></div>
+        </div>
+
+        <div class="col-2">fear</div>
+        <div class="col-4">
+          <div class="fear-rate" data-score="<%= @post.fear_rate %>"></div>
+        </div>
+
+        <div class="col-2">splatter</div>
+        <div class="col-4">
+          <div class="splatter-rate" data-score="<%= @post.splatter_rate %>"></div>
+        </div>
       </div>
 
       <div class="row pt-1">
@@ -64,14 +83,50 @@
       <% if @post.user == current_user %>
         <div class="row py-3">
           <div class="col text-right">
-            <%= link_to "編集する", edit_post_path(@post), class: "btn btn-sm btn-outline-secondary w-50" %>
+            <%= link_to "編集", edit_post_path(@post), class: "btn btn-sm btn-outline-secondary w-50" %>
           </div>
           <div class="col text-left">
-            <%= link_to "削除する", post_path(@post), method: :delete,
+            <%= link_to "削除", post_path(@post), method: :delete,
               data: { confirm: '本当に削除してもよろしいですか？' }, class: "btn btn-sm btn-outline-danger w-50" %>
           </div>
         </div>
       <% end %>
+
+      <div class="row mt-5 mb-2">
+        <h4>コメント（<%= @post.comments.count %>件）</h4>
+      </div>
+
+      <% @post.comments.each do |comment| %>
+        <div class="row border rounded">
+          <div class="col-3">
+            <%= image_tag comment.user.get_image(70, 70), class: "rounded-circle" %>
+          </div>
+
+          <div class="col">
+            <%= comment.user.name %><br>
+            <%= comment.created_at.strftime('%Y/%m/%d') %><br>
+            <%= comment.comment %>
+
+            <% if comment.user == current_user %>
+              <div class="row">
+                <div class="col text-right py-2">
+                  <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete,
+                    class: "btn btn-sm btn-outline-danger w-25" %>
+                </div>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
+
+      <div class="row pt-5">
+        <div class="col mx-auto text-right">
+          <%= form_with model: [@post, @comment] do |f| %>
+            <%= f.text_area :comment, rows: '2', placeholder: "コメントはこちら", class: "form-control" %>
+            <%= f.submit "コメント", class: "btn btn-sm btn-outline-secondary w-50 mt-2" %>
+          <% end %>
+        </div>
+      </div>
     </div>
 
     <div class="col-1"></div>
