--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,14 @@
       <%= render 'layouts/search' %>
       <%= render 'layouts/notice' %>
 
-      <%= yield %>
+      <main>
+        <%= yield %>
+      </main>
+
 
       <%= render 'layouts/footer' %>
+
+
 
   </body>
 </html>
