--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,23 +1,22 @@
 <div class="container">
   <div class="row">
-    <div class="col-8 mx-auto">
+    <div class="col-md-10 col-lg-8 mx-auto">
       <div class="row">
         <h4 class="py-4">新規レビュー一覧</h4>
       </div>
 
       <% @posts.each do |post| %>
-        <div class="row border rounded p-3 mb-3">
+        <div class="row border rounded p-2 mb-2">
           <div class="col-3">
-            <%= image_tag post.user.get_image(100, 100) %>
+            <%= image_tag post.user.get_image(100, 100), class: "rounded-circle" %>
           </div>
 
           <div class="col-9">
             <p>
               <%= post.user.name %><br>
-              <%= post.created_at.strftime('%Y/%m/%d') %>
+              <%= post.created_at.strftime('%Y/%m/%d') %><text>　（<%= post.comments.count %>）</text><br>
+              <%= post.review %>
             </p>
-
-            <p><%= post.review %></p>
 
             <div class="text-center">
               <%= link_to "詳細", admin_post_path(post.id), class: "btn btn-sm btn-outline-secondary w-50" %>
