--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,2 +1,40 @@
-<h1>Admin::Users#edit</h1>
-<p>Find me in app/views/admin/users/edit.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10 col-lg-8 mx-auto">
+      <div class="row">
+        <h4 class="py-4">ユーザー情報編集</h4>
+      </div>
+
+      <%= render 'layouts/errors', obj: @user %>
+
+      <%= form_with model: @user, url: admin_user_path(@user), local: true, method: :patch do |f| %>
+        <div class="field row pb-3">
+          <%= f.label :image, "プロフィール画像" %>
+          <%= f.file_field :image, accept: 'image/*', class: "form-control-file" %>
+        </div>
+
+        <div class="field row pb-3">
+          <%= f.label :name, "ニックネーム　" %>
+          <%= f.text_field :name, autofocus: true, class: "form-control col-md-7" %>
+        </div>
+
+        <div class="field row pb-3">
+          <%= f.label :introduction, "プロフィール　" %>
+          <%= f.text_area :introduction, autofocus: true, class: "form-control col-md-7" %>
+        </div>
+
+        <div class="field row pb-3">
+          <label class="mr-5">アカウント</label>
+          <label class="mr-5">有効　<%= f.radio_button :is_stopped, :false %></label>
+
+          <label>停止　<%= f.radio_button :is_stopped, :true %></label>
+
+        </div>
+
+        <div class="actions row">
+          <%= f.submit "保存する", class: "btn btn-sm btn-success w-25 mx-auto" %>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
