--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-8 mx-auto">
+    <div class="col-md-10 col-lg-8 mx-auto">
       <div class="row">
         <h4 class="py-4">ユーザー詳細</h4>
       </div>
@@ -10,9 +10,9 @@
           <%= image_tag @user.get_image(100, 100) %>
         </div>
 
-        <div class="col-8">
+        <div class="col-9">
           <div class="row border-bottom py-2">
-            <div class="col-3">
+            <div class="col-12 col-lg-4">
             ユーザー名
             </div>
 
@@ -22,7 +22,7 @@
           </div>
 
           <div class="row border-bottom py-2">
-            <div class="col-3">
+            <div class="col-12 col-lg-4">
             プロフィール
             </div>
 
@@ -32,7 +32,7 @@
           </div>
 
           <div class="row border-bottom py-2">
-            <div class="col-3">
+            <div class="col-12 col-lg-4">
             アカウント
             </div>
 
