--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,7 +1,7 @@
 <footer class="bg-secondary mt-5">
-  <div class="container">
+  <div class="cotainer">
     <div class="row">
-      <div class='mx-auto'>
+      <div class="mx-auto">
     		<p class="text-white">© Horrers</p>
     	</div>
     </div>
