--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -97,7 +97,7 @@
       </div>
 
       <% @post.comments.each do |comment| %>
-        <div class="row border rounded">
+        <div class="row border rounded mb-2">
           <div class="col-3">
             <%= image_tag comment.user.get_image(70, 70), class: "rounded-circle" %>
           </div>
