--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,29 +1,31 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-10 mx-auto">
-      <h4>プロフィール編集</h4>
+    <div class="col-md-10 col-lg-8 mx-auto">
+      <div class="row">
+        <h4 class="py-4">プロフィール編集</h4>
+      </div>
+
       <%= render 'layouts/errors', obj: @user %>
 
       <%= form_with model: @user, url: users_path, local: true, method: :patch do |f| %>
+        <div class="field row pb-3">
+          <%= f.label :image, "プロフィール画像" %>
+          <%= f.file_field :image, accept: 'image/*', class: "form-control-file" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :image, "プロフィール画像" %>
-        <%= f.file_field :image, accept: 'image/*', class: "form-control-file" %>
-      </div>
+        <div class="field row pb-3">
+          <%= f.label :name, "ニックネーム　" %>
+          <%= f.text_field :name, autofocus: true, class: "form-control col-md-7" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :name, "ニックネーム" %><br />
-        <%= f.text_field :name, autofocus: true %>
-      </div>
+        <div class="field row pb-3">
+          <%= f.label :introduction, "プロフィール　" %>
+          <%= f.text_area :introduction, autofocus: true, class: "form-control col-md-7" %>
+        </div>
 
-      <div class="field">
-        <%= f.label :introduction, "プロフィール" %><br />
-        <%= f.text_area :introduction, autofocus: true %>
-      </div>
-
-      <div class="actions">
-        <%= f.submit "保存する", class: "btn btn-sm btn-success" %>
-      </div>
+        <div class="actions row">
+          <%= f.submit "保存する", class: "btn btn-sm btn-success w-25 mx-auto" %>
+        </div>
       <% end %>
     </div>
   </div>
