[add]管理者側タグ削除機能

--- a/app/views/admin/comments/index.html.erb
+++ b/app/views/admin/comments/index.html.erb
@@ -19,7 +19,7 @@
             </p>
 
             <div class="text-center">
-              <%= link_to "詳細", admin_post_path(comment.post.id), class: "btn btn-sm btn-outline-secondary w-50" %>
+              <%= link_to "詳細", admin_post_path(comment.post.id), class: "btn btn-sm btn-secondary w-50" %>
             </div>
           </div>
         </div>
