--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,10 +1,10 @@
 <div class="container">
   <div class="row">
-    <div class="col-3">
+    <div class="col-sm-12 col-md-4">
       <%= render "layouts/sidebar" %>
     </div>
 
-    <div class="col-8">
+    <div class="col-md-8 mx-auto">
       <div class="row">
         <h5 class="py-4">新着投稿一覧</h5>
       </div>
