--- a/app/views/public/posts/_posts_index.html.erb
+++ b/app/views/public/posts/_posts_index.html.erb
@@ -44,7 +44,7 @@
 
       <div class="row pt-4">
         <div class="col-6">
-          <%= link_to "レビューを見る", post_path(post), class: "btn btn-sm btn-outline-secondary w-75" %>
+          <%= link_to "レビューを見る", post_path(post), class: "btn btn-sm btn-secondary w-75" %>
         </div>
 
         <% if post.is_spoiler == true %>
