--- a/app/views/admin/posts/show.html.erb
+++ b/app/views/admin/posts/show.html.erb
@@ -5,10 +5,10 @@
         <h4 class="py-4">レビュー詳細</h4>
       </div>
 
-      <div class="row">
+      <div class="row border rounded p-3">
         <div class="col-3">
           <%= link_to admin_user_path(@post.user.id) do %>
-            <%= image_tag @post.user.get_image(100, 100) %>
+            <%= image_tag @post.user.get_image(100, 100), class: "rounded-circle" %>
           <% end %>
         </div>
 
