--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -7,7 +7,7 @@
 
       <div class="row">
         <div class="col-3">
-          <%= image_tag @user.get_image(100, 100) %>
+          <%= image_tag @user.get_image(100, 100), class: "rounded-circle" %>
         </div>
 
         <div class="col-9">
@@ -46,10 +46,29 @@
           </div>
 
           <div class="text-center">
-            <%= link_to "編集する", edit_admin_user_path(@user), class: "btn btn-sm btn-outline-secondary mt-3 w-50" %>
+            <%= link_to "編集する", edit_admin_user_path(@user), class: "btn btn-sm btn-secondary mt-3 w-50" %>
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <h4 class="py-4">投稿（<%= @user.posts.count %>件）</h4>
+      </div>
+
+      <% @user.posts.each do |post| %>
+        <div class="row border rounded mb-2">
+          <div class="col">
+            <p>
+              <%= post.created_at.strftime('%Y/%m/%d') %><br>
+              <%= post.review %>
+            </p>
+
+            <div class="text-center">
+              <%= link_to "詳細", admin_post_path(post.id), class: "btn btn-sm btn-secondary mb-2 w-25" %>
+            </div>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
