--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,9 +1,3 @@
-<footer class="bg-secondary mt-5">
-  <div class="cotainer">
-    <div class="row">
-      <div class="mx-auto">
-    		<p class="text-white">© Horrers</p>
-    	</div>
-    </div>
-  </div>
+<footer class="bg-secondary text-center">
+  <div class="text-white p-5">© Horrers</div>
 </footer>
