--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
 <header>
-  <nav class="navbar navbar-expand-md navbar-light">
+  <nav class="navbar navbar-expand-md navbar-dark">
     <% if admin_signed_in? %>
       <%= link_to "Horrers", admin_root_path, class: "navbar-brand" %>
     <% else %>
@@ -24,6 +24,7 @@
         <% elsif admin_signed_in? %>
           <li><%= link_to "ユーザー一覧", admin_users_path, class: 'nav-link' %></li>
           <li><%= link_to "コメント一覧", admin_comments_path, class: 'nav-link' %></li>
+          <li><%= link_to "タグ一覧", admin_tags_path, class: 'nav-link' %></li>
           <li><%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link' %></li>
         <% else %>
           <li><%= link_to "About", about_path, class: 'nav-link' %></li>
