--- a/app/views/public/searchs/_movie_results.html.erb
+++ b/app/views/public/searchs/_movie_results.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-  <h5><%= content %>の検索結果（<%= movies.results.count %>件）</h5>
+  <h5><%= content %>の映画検索結果（<%= movies.results.count %>件）</h5>
 </div>
-<% if movies.present? %>
+<% unless movies.empty? %>
   <% i = 0 %>
   <% while i < movies.results.count %>
     <div class="row border rounded my-3">
@@ -14,13 +14,11 @@
         <p class="font-weight-bold"><%= movies.results[i]['title'] %></p>
         <P><%= movies.results[i]['release_date'] %></P>
         <P>あらすじ</p>
-        <p><%= movies.results[i]['overview'] %></p>
-        <%= link_to "詳細", search_detail_path(category: "movie", tmdb_no: movies.results[i]['id']), class: "btn btn-sm btn-outline-secondary w-25" %>
+        <p><%= movies.results[i]['overview'].truncate(100, omission: "．．．．．") %></p>
+        <%= link_to "詳細", search_detail_path(category: "movie", tmdb_no: movies.results[i]['id']), class: "btn btn-sm btn-secondary w-25" %>
       </div>
     </div>
     <% i += 1 %>
   <% end %>
-<% else %>
-  <P>見つかりませんでした。</P>
 <% end %>
 
