--- a/app/views/public/searchs/_tv_results.html.erb
+++ b/app/views/public/searchs/_tv_results.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
-  <h5><%= content %>の検索結果（<%= tvs.results.count %>件）</h5>
+  <h5><%= content %>のドラマ検索結果（<%= tvs.results.count %>件）</h5>
 </div>
-<% if tvs.present? %>
+<% unless tvs.empty? %>
   <% i = 0 %>
   <% while i < tvs.results.count %>
     <div class="row border rounded my-3">
@@ -14,12 +14,10 @@
         <p class="font-weight-bold"><%= tvs.results[i]['name'] %></p>
         <P><%= tvs.results[i]['first_air_date'] %></P>
         <P>あらすじ</p>
-        <p><%= tvs.results[i]['overview'] %></p>
-        <%= link_to "詳細", search_detail_path(category: "tv", tmdb_no: tvs.results[i]['id']), class: "btn btn-sm btn-outline-secondary w-25" %>
+        <p><%= tvs.results[i]['overview'].truncate(100, omission: "．．．．．") %></p>
+        <%= link_to "詳細", search_detail_path(category: "tv", tmdb_no: tvs.results[i]['id']), class: "btn btn-sm btn-secondary w-25" %>
       </div>
     </div>
     <% i += 1 %>
   <% end %>
-<% else %>
-  <P>見つかりませんでした。</P>
 <% end %>
