[add]レート検索機能

--- a/app/views/public/searchs/tag_posts_list.html.erb
+++ b/app/views/public/searchs/tag_posts_list.html.erb
@@ -12,7 +12,7 @@
       <%= render "public/posts/posts_index", posts: @posts %>
 
       <div class="row">
-        <!--<p>%= paginate @posts %></p>-->
+        <p><%= paginate @posts %></p>
       </div>
 
     </div>
